# our-project-name

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Game Concept Process.docx  README.md  _config.yml  index.md
Urho3D/: .installreq.sh  CMakeLists.txt  Doxyfile
Urho3D/PipeTest/: pipewithprocesses.cpp
Urho3D/UrhoSample/: main.cpp
Urho3D/current-build/test/: FFT_TEST  FREQMAX_TEST
Urho3D/docs/html/: _rt_audio_8h.html  _rt_audio_8h_source.html  _rt_error_8h_source.html  _sample_8h_source.html  annotated.html  audio_in_8h_source.html  class_game_sys-members.html  class_game_sys.html  class_gamesys.html  class_rt_api-members.html  class_rt_api.html  class_rt_api_dummy-members.html  class_rt_api_dummy.html  (+59 more)
Urho3D/sample_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Urho3D/splash/: CMakeLists.txt  Start.cpp  Start.h  audioIn.h  defineNote.cpp  defineNote.h  fft.cpp  fft.h  findFreqMax.cpp  instructionsStatements.cpp  instructionsStatements.h  lol.h  output.txt  playNote.cpp  playNote.h  processBuffer.cpp  processBuffer.h  realtime-beat.cpp  realtime-beat.h  sinewave.h  splash.cpp  splash.h
Urho3D/splash/test/: CMakeLists.txt  FREQMAX_TEST  define_note_test.cpp  fft.cpp  fft.h  fft_test.cpp  test.cpp
Urho3D/splash_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Urho3D/src/: CMakeLists.txt  Sample.h  Sample.inl  audioIn.h  defineNote.cpp  defineNote.h  fft.cpp  fft.h  findFreqMax.cpp  findFreqMax.h  instructionsStatements.cpp  instructionsStatements.h  main.cpp  main.h  playNote.cpp  processBuffer.h  sinewave.cpp  sinewave.h
assets/: SpaceShip.mdl  UFOHUD.jfif  main_bg.xml
docs/html/: _r_e_a_d_m_e_8md.html  _rt_audio_8cpp.html  _rt_audio_8h.html  _rt_audio_8h_source.html  _rt_error_8h.html  _rt_error_8h_source.html  _sample_8h.html  _sample_8h_source.html  _sample_8inl.html  annotated.html  audio_in_8h.html  audio_in_8h_source.html  class_game_sys-members.html  class_game_sys.html  class_gamesys.html  class_rt_api-members.html  class_rt_api.html  class_rt_api_dummy-members.html  class_rt_api_dummy.html  class_rt_audio-members.html  class_rt_audio.html  class_rt_audio_error-members.html  class_rt_audio_error.html  class_rt_error-members.html  class_rt_error.html  class_s24-members.html  class_s24.html  class_sample-members.html  class_sample.html  class_static_assert-members.html  class_static_assert.html  class_static_assert_3_01true_01_4-members.html  class_static_assert_3_01true_01_4.html  class_static_assertions-members.html  class_static_assertions.html  classes.html  define_note_8cpp.html  define_note_8h.html  define_note_8h_source.html  dir_a78a6046aade2e9349889bf40c83c4a6.html  (+75 more)
docs/latex/: _r_e_a_d_m_e_8md.tex  _rt_audio_8cpp.tex  _rt_audio_8h.tex  _rt_error_8h.tex  _sample_8h.tex  _sample_8inl.tex  audio_in_8h.tex  class_game_sys.tex  class_gamesys.tex  class_rt_api.tex  class_rt_api_dummy.tex  class_rt_audio.tex  class_rt_audio_error.eps  class_rt_audio_error.tex  class_rt_error.tex  class_s24.tex  class_sample.tex  class_static_assert.tex  class_static_assert_3_01true_01_4.tex  class_static_assertions.tex  define_note_8cpp.tex  define_note_8h.tex  dir_a78a6046aade2e9349889bf40c83c4a6.tex  dir_dafa3c70a7722e8231d67e4f2771efbd.tex  fft_8cpp.tex  fft_8h.tex  files.tex  find_freq_max_8cpp.tex  find_freq_max_8h.tex  instructions_statements_8cpp.tex  instructions_statements_8h.tex  main_8cpp.tex  main_8h.tex  namespaces.tex  namespacesound.tex  play_note_8cpp.tex  play_note_8h.tex  process_buffer_8h.tex  refman.tex  sinewave_8cpp.tex  (+7 more)
html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _rt_audio_8cpp_source.html  _rt_audio_8h.html  _rt_audio_8h_source.html  _rt_error_8h_source.html  _sample_8h_source.html  _sample_8inl_source.html  annotated.html  audio_in_8h_source.html  class_game_sys-members.html  class_game_sys.html  class_gamesys.html  class_rt_api-members.html  class_rt_api.html  class_rt_api_dummy-members.html  class_rt_api_dummy.html  class_rt_audio-members.html  class_rt_audio.html  class_rt_audio_error-members.html  class_rt_audio_error.html  class_rt_error-members.html  class_rt_error.html  class_s24-members.html  class_s24.html  class_sample-members.html  class_sample.html  class_static_assert-members.html  class_static_assert.html  class_static_assert_3_01true_01_4-members.html  class_static_assert_3_01true_01_4.html  class_static_assertions-members.html  class_static_assertions.html  classes.html  define__note__test_8cpp.html  define__note__test_8cpp_source.html  define_note_8cpp_source.html  define_note_8h_source.html  dir_15f0f00390207adf77fd91b8bfc1c656.html  dir_26ec2c68a22b73751638aa374fdbf2dd.html  (+53 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  (+36 more)
latex/: _rt_audio_8h.tex  annotated.tex  class_game_sys.eps  class_game_sys.tex  class_gamesys.tex  class_rt_api.eps  class_rt_api.tex  class_rt_api_dummy.tex  class_rt_audio.tex  class_rt_audio_error.tex  class_rt_error.tex  class_s24.tex  class_sample.eps  class_sample.tex  class_static_assert.tex  class_static_assert_3_01true_01_4.tex  class_static_assertions.tex  define__note__test_8cpp.tex  fft_8cpp.tex  fft__test_8cpp.tex  files.tex  hierarchy.tex  main_8cpp.tex  md__urho3_d_src__r_e_a_d_m_e.tex  namespace_urho3_d.tex  namespaces.tex  namespacesound.tex  play_note_8cpp.tex  refman.tex  struct_callback_info.tex  struct_rt_api_1_1_convert_info.tex  struct_rt_api_1_1_rt_api_stream.tex  struct_rt_audio_1_1_device_info.tex  struct_rt_audio_1_1_stream_options.tex  struct_rt_audio_1_1_stream_parameters.tex
realtime-beat-tracking-master/: realtime-beat  realtime-beat.cpp  sinewave.h
(+215 files in other folders)
